feat: Merge AI config into server config (#432)
* feat: Merge AI config into server config

- Integrate AI configuration into the server config service
- Remove standalone ai-config service and its route
- Update client settings page to use config API instead of ai-config API
- Mark AI config API as deprecated in favor of server config API
- All AI config keys now use flattened format: ai_summary.enabled, ai_summary.provider, etc.
- Update test API client to maintain backward compatibility
- All 284 tests passing

* feat: Add Cloudflare Worker AI support

- Add AI binding to worker-configuration.d.ts
- Implement generateWorkerAISummary function using env.AI.run()
- Support multiple Worker AI models (Llama, Mistral, Gemma, Deepseek, Qwen)
- Add worker-ai as a provider option with 9 available models
- Update client settings UI with Worker AI option (marked as Free)
- Worker AI requires no API key, uses Cloudflare's free tier
- All 284 tests passing

* security: Force server config to use database storage

- Server config now always uses database storage to prevent API key leakage
- Added explicit 'database' storage mode parameter to CacheImpl constructor
- Updated _worker.ts scheduled function to use database for serverConfig
- Updated base.ts lazy initialization to use database for serverConfig
- Client config can still use S3 if configured for better performance
- AI config was already migrated to server config database in previous commits
- All 284 tests passing

* fix: Fix PR Preview worker name format and URL extraction

- Change PR Preview worker name from `-preview` to `-pr-{number}` format
  to match the format used in clean.yml for proper cleanup
- Extract actual deployment URL from deploy script output instead of hardcoding
- Add PR number to preview site name for better identification

* feat: Add AI model testing button in settings

- Add POST /api/config/test-ai endpoint to test AI model configuration
- Add testAI method to client ConfigAPI
- Add test but

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -238,7 +238,17 @@
         "button": "Save Configuration"
       },
       "save_success": "Saved successfully",
-      "unsaved_changes": "You have unsaved changes"
+      "unsaved_changes": "You have unsaved changes",
+      "test": {
+        "title": "Test Model",
+        "desc": "Test if the AI model is available",
+        "button": "Test Connection",
+        "success": "Test successful",
+        "failed": "Test failed",
+        "error": "Test error",
+        "testing": "Testing...",
+        "http_error$status": "HTTP Error (Status: {{status}})"
+      }
     },
     "get_config_failed$message": "Failed to get configuration, {{message}}",
     "import_failed$message": "Import failed, {{message}}",
