--- a/client/public/locales/zh-TW/translation.json
+++ b/client/public/locales/zh-TW/translation.json
@@ -229,7 +229,17 @@
         "button": "儲存設定"
       },
       "save_success": "儲存成功",
-      "unsaved_changes": "您有未儲存的變更"
+      "unsaved_changes": "您有未儲存的變更",
+      "test": {
+        "title": "測試模型",
+        "desc": "測試 AI 模型是否可用",
+        "button": "測試連接",
+        "success": "測試成功",
+        "failed": "測試失敗",
+        "error": "測試出錯",
+        "testing": "正在測試...",
+        "http_error$status": "HTTP 錯誤 (狀態碼: {{status}})"
+      }
     },
     "get_config_failed$message": "獲取配置失敗，{{message}}",
     "import_failed$message": "匯入失敗，{{message}}",
